fix collapse style

--- a/src/components/Collapse/_Collapse.scss
+++ b/src/components/Collapse/_Collapse.scss
@@ -7,12 +7,12 @@
 		color: white;
 		cursor: pointer;
 		display: flex;
-		width: 94%;
 		justify-content: space-between;
 		align-items: center;
 		height: 47px;
 		padding: 7px 15px;
 		border-radius: 5px;
+		width: 100%;
 
 		h2 {
 			font-size: 20px;
@@ -24,7 +24,6 @@
 		font-style: normal;
 		font-weight: 400;
 		line-height: 142.6%;
-		width: 94%;
 		opacity: 0;
 		color: #ff6060;
 		background: #f6f6f6;
@@ -52,6 +51,20 @@
 }
 
 .rotated {
-		transform: rotate(180deg);
-		transition: 0.4s ease-in-out;
-	}
+	transform: rotate(180deg);
+	transition: 0.4s ease-in-out;
+}
+
+.about-style {
+	width: 87.5%;
+	display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.fiche-style {
+	margin-top: 31px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
