--- a/src/components/Tag/_Tag.scss
+++ b/src/components/Tag/_Tag.scss
@@ -16,5 +16,5 @@
     align-items: center;
     justify-content: center;
     margin-right: 10px;
-    padding: 0 10px;
+    padding: 2px 10px 0 10px
 }
