--- a/src/style/App.scss
+++ b/src/style/App.scss
@@ -99,5 +99,5 @@
 .collapse-fiche-container {
 	display: flex;
     width: 100%;
-	justify-content: space-between;
+	gap: 6%;
 }
